# pixel-dumpster

./: .gitignore  CMakeLists.txt  partitions.csv  readme.md  sdkconfig.defaults
components/lodepng/: CMakeLists.txt
components/pd-config/: CMakeLists.txt  pd-config.c
components/pd-content/: CMakeLists.txt  pd-content.c
components/pd-discovery/: CMakeLists.txt  pd-discovery.c  pd-discovery.h
components/pd-display/: CMakeLists.txt  pd-display-tests.cpp  pd-display.c  pd-display.cpp
components/pd-network/: CMakeLists.txt  (+1 more)
docs/: content-system.md  test-content-update-summary.md
documentation/: api.md  development-process.md  development-stack.md  development.md  dumpster-diver.md  kebab-style-naming.md  pixel-dumpster.md  transitions.md  wizard-protocol.md
examples/: node-client.js  package.json  panel-graphics-layout-example.ai  python-client.py  readme.md
main/: CMakeLists.txt  app-main.c  idf_component.yml
pd-control/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
pd-control/src-tauri/: Cargo.toml  tauri.conf.json
pd-control/src-tauri/icons/: icon.icns
pd-control/src-tauri/src/: commands.rs  daemon_api.rs  device_api.rs  discovery.rs  flasher.rs  main.rs  pi_installer.rs  serial_wizard.rs
tools/: Makefile  config-playbox-example.json  content-cli.c  detect-es-features.sh  discovery.c  discovery.h  dumpster-diver  dumpster-diver-config.json  dumpster-diver.c  generate_font_sheet.py  install-retropie-enhanced.sh  install-retropie.sh  playlist-cli.c  test-es-log.txt  test-fifo.sh  wizard-cli.c  wizard-cli.py
(+42 files in other folders)
